user-core-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-core-service
spec:
  selector:
    app: user-core-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6001
  type: LoadBalancer
